# Aworda-LBot

./: .gitignore  README.md  config.py  fucknull.py  get_resource.py  main.py  migrator.py  model.py  pyproject.toml
aworda/lbot/: __init__.py  config.py  database.py  function.py  permission.py  utils.py
modules/: _stop_face_join_face.py  bot_manage.py  carbo.py  code_exec.py  dialog.py  event.py  kemomimi.py  sign_in.py
modules/rua/: __init__.py
modules/rua/rua_data/: data_source.py
modules_modified/: backend_laning.py  bot_manage.py  carbo.py  code_exec.py  dialog.py  event.py  facejoinface.py  kemomimi.py  sign_in.py  status.py
modules_modified/rua/: __init__.py
resource/: illness.txt  wordmatcher.txt
resource/sign-in/hitokoto/cache/: archive.json
resource/sign-in/user/: 1003401091.json  1003527257.json  1007501040.json  1009831620.json  1010451875.json  1011243042.json  1017770738.json  1020890868.json  1021471027.json  1023133466.json  1023143451.json  1024369925.json  1027094894.json  1027354152.json  1029740428.json  1031107030.json  103303168.json  103538702.json  1036483975.json  1037071164.json  1038839996.json  1040704961.json  1043370819.json  1048624825.json  1051067327.json  1051643831.json  1054805412.json  1057170108.json  105886036.json  1059253646.json  1059739572.json  1060723083.json  1062377055.json  1062477315.json  1062780135.json  1063485401.json  1067968771.json  1069023366.json  1070812566.json  1070981336.json  (+1888 more)
utils/: text2image.py
