[tool.poetry]
name = "aworda-lbot"
version = "0.0.2"
description = "另一个世界里，我希望你过得比这个世界的我好，霖念。"
authors = ["Little-LinNian <2544704967@qq.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.9"
graia-ariadne = "^0.6.16"
beanie = "^1.11.0"
graia-saya = "^0.0.15"
pillow = "^9.1.1"
ujson = "^5.3.0"
arclet-alconna-graia = "^0.0.13"
aiofiles = "^0.8.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "txcloud"
default = true
url = "https://mirrors.cloud.tencent.com/pypi/simple"



